--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Notli</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_dashboard">Dashboard</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="actionSettings">Einstellungen</string>
+    <string name="actionAddSubject">Fach hinzufügen</string>
+    <string name="actionAddSemester">Semester hinzufügen</string>
 </resources>
