--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="actionSettings">Einstellungen</string>
     <string name="actionAddSubject">Fach hinzufügen</string>
     <string name="actionAddSemester">Semester hinzufügen</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
