--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,13 @@
     <string name="actionSettings">Einstellungen</string>
     <string name="actionAddSubject">Fach hinzufügen</string>
     <string name="actionAddSemester">Semester hinzufügen</string>
-    <string name="title_activity_addGrade">Add Grade</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+
+
+    <!--AddGrade-->
+    <string name="title_activity_addGrade">Add Grade</string>
+    <string name="text_activity_addGrade_thema">Thema</string>
+    <string name="date_activity_addGrade_date">Date</string>
+    <string name="button_activity_addGrade_save">Save</string>
 </resources>
