--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,7 @@
 <resources>
     <string name="app_name">Notli</string>
     <string name="title_activity_dashboard">Dashboard</string>
-    <string name="actionSettings">Einstellungen</string>
-    <string name="actionAddSubject">Fach hinzufügen</string>
-    <string name="actionAddSemester">Semester hinzufügen</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="action_settings">Einstellungen</string>
 
 
     <!--AddGrade-->
