--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <!--AddGrade-->
     <string name="title_activity_addGrade">Add Grade</string>
     <string name="text_activity_addEditGrade_thema">Thema</string>
-    <string name="text_activity_addGrade_date">Date</string>
-    <string name="button_activity_addEditGrade_save">Save</string>
-    <string name="button_activity_addEditGrade_delete">Delete</string>
+    <string name="text_activity_addGrade_date">Datum</string>
+    <string name="button_activity_addEditGrade_save">Speichern</string>
+    <string name="button_activity_addEditGrade_delete">Löschen</string>
 </resources>
