--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
 
 
     <!--AddGrade-->
-    <string name="title_activity_addGrade">Add Grade</string>
-    <string name="text_activity_addEditGrade_thema">Thema</string>
+    <string name="title_activity_addGrade">Note Hinzufügen</string>
+    <string name="text_activity_addEditGrade_topic">Thema</string>
     <string name="text_activity_addGrade_date">Datum</string>
     <string name="button_activity_addEditGrade_save">Speichern</string>
     <string name="button_activity_addEditGrade_delete">Löschen</string>
